# themeparks-data-engineering

./: .airflowignore  .dockerignore  .env.example  .gitignore  Dockerfile.ghcr  README.md  airflow-install.sh  docker-build-push.sh  docker-compose.override.yml  magic.csv  main.py  pyproject.toml  requirements.txt  themepark_pipeline.py
dags/: __init__.py  config.py  dag_import_test.py  destinations_dag.py  entities_dag.py  live_data_dag.py  test_refactoring.py  themepark_destination_dag.py  themepark_destinations_iceberg_dag.py  themepark_entities_dag.py  themepark_entities_iceberg_dag.py  themepark_live_data_dag.py  themepark_live_gold_dag.py  themepark_live_iceberg_dag.py  themepark_maintenance_dag.py  themepark_minio_load_dag.py  themeparks_dag.py  themeparks_dag_refactored.py  themeparks_k8s_dag.py  validators.py
docker/: Dockerfile  docker-compose.yml
extractors/: themeparks_client.py
include/extractors/: queue_times.py  themeparks.py
include/loaders/: CsvLoader.py  IcebergLoader.py  KafkaLoader.py  Loader.py  MinioLoader.py  ParquetLoader.py  __init__.py  parquet_writer.py
include/writers/: bronze_writer.py  iceberg_writer.py
loaders/: MinioStorage.py  __init__.py
notebooks/: query_iceberg.ipynb
pipelines/: base.py  destinations.py  entities.py  live_data.py
scripts/: build-and-deploy.sh
src/: main.py  themepark_pipeline.py
src/loaders/: CsvLoader.py  KafkaLoader.py  ParquetLoader.py  __init__.py  load_target.py
src/pipelines/: __init__.py  base.py  entities.py  live_data.py
themeparks/: __init__.py  __main__.py
themeparks/cli/: load.py  (+4 more)
(+15 files in other folders)
