[project]
name = "themeparks-data-engineering"
version = "0.1.0"
description = "Data engineering pipeline for theme park wait times and schedule data"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "kafka-python>=2.3.0",
    "pandas>=3.0.0",
    "pyarrow>=23.0.0",
    "python-dotenv>=1.2.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pipelines", "loaders", "extractors", "transformers", "dags"]

[dependency-groups]
dev = []
