[project]
name = "themeparks-data-engineering"
version = "2.0.0"
description = "Kubernetes-ready ETL pipeline for theme park data with modular extract-transform-load architecture"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "kafka-python>=2.3.0",
    "pandas>=3.0.0",
    "pyarrow>=23.0.0",
    "python-dotenv>=1.2.1",
    "minio>=7.2.0",
    "click>=8.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["themeparks", "extractors", "loaders", "transformers"]

[dependency-groups]
dev = []
